<resources>
    <string name="app_name">COVID-FollowUp Survey</string>
    <string name="householdidentification_mainheading">گھرانے کی شناخت:  </string>
    <string name="physicalexaminationanthropometricmeasurements_mainheading">جسمانی معائنہ اور قد اور وزن کی پیمائش:  </string>
    <string name="individualinformation_mainheading">انفرادی معلومات:  </string>
    <string name="btnSync">Download Data</string>
    <string name="btnUpload">Upload Data</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="splashText"> </string>
    <string name="splashText2">  </string>
    <string name="check_pending_forms">CHECK PENDING FORMS</string>
    <string name="open_new_form">OPEN NEW FORM</string>
    <string name="records_summary">Records Summary</string>
    <string name="main_menu">Main Menu</string>
    <string name="only_for_testing">ONLY FOR TESTING</string>
    <string name="database">Database</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="no"> نہیں </string>
    <string name="dkn"> معلوم نہیں </string>
    <string name="none"> کوئی نہیں </string>
    <string name="never"> کبھی نہیں </string>
    <string name="na"> قابل اطلاق / دستیاب نہیں  </string>
    <string name="nap"> قابل اطلاق نہیں </string>
    <string name="nav"> دستیاب نہیں </string>
    <string name="ref"> انکار کر دیا </string>
    <string name="other"> دیگر </string>
    <string name="specify"> وضاحت کریں </string>
    <string name="year"> سال </string>
    <string name="month"> مہینہ </string>
    <string name="weeks"> ہفتے </string>
    <string name="days"> دن </string>
    <string name="hours"> گھنٹے </string>
    <string name="minutes"> منٹ </string>
    <string name="kg"> کلوگرام </string>
    <string name="km"> کلومیٹر </string>
    <string name="cm"> سینٹی میٹر </string>
    <string name="in"> انچ </string>
    <string name="rupees"> روپے </string>
    <string name="num"> اعداد </string>
    <string name="name"> نام </string>
    <string name="contactnum"> رابطہ نمبر </string>
    <string name="checkHHpresent"> گھر کے سربراہ کا نام لائن لسٹنگ ڈیٹا سے مطابقت رکھتا ہے۔ </string>
    <string name="newHHheadname"> نیا سربراہ کا نام </string>
    <string name="ha01">انٹرویو کی تاریخ</string>
    <string name="ha02">انٹرویو شروع کرنے کا وقت(24 گھنٹوں میں)</string>
    <string name="ha03">انٹرویو لینے والے کا کوڈ</string>
    <string name="ha04">انٹرویو لینے والے کا نام</string>
    <string name="ha08">ضلع</string>
    <string name="ha0801">مٹیاری </string>
    <string name="ha0802">کراچی سینٹرل</string>
    <string name="ha0803"> ضلع کراچی شرقی</string>
    <string name="ha0804"> کراچی ساوتھ </string>
    <string name="ha0805">کراچی ویسٹ</string>
    <string name="ha09">سب ڈسٹرکٹ</string>
    <string name="ha0806">کورنگی</string>
    <string name="ha0807">ملیر</string>
    <string name="ha13">گھرانے کا نمبر</string>
    <string name="ha12">کلسٹر نمبر</string>
    <string name="ha11">مقام،گھر کے قریب مشہور جگہ کے ساتھ گلی کا پتہ</string>
    <string name="ha14">گھرانے کے انٹرویوکا نتیجہ:
نوٹ:  انٹرویو مکمل نہ ہونے  کی صورت میں سپروائزر سے رابطہ کریں</string>
    <string name="ha1401">مکمل</string>
    <string name="ha1408">دوبارہ دورہ</string>
    <string name="ha1496">دیگر(وضاحت کریں)</string>
    <string name="ha1402">گھر بند ہے</string>
    <string name="ha1403">گھر میں کوئی اہل جواب دہندہ موجود نہیں</string>
    <string name="ha1404">گھر طویل مدت سے بند ہے</string>
    <string name="ha1405">انکار کردیا</string>
    <string name="ha1406">رہائش خالی ہے یا رہائش گاہ نہیں</string>
    <string name="ha1407">رہائش نہیں ملی</string>
    <string name="pc01"> کیا خون کا نمونہ لیا گیا تھا؟</string>
    <string name="pc011">ہاں</string>
    <string name="pc012">نہیں</string>
    <string name="pc02">حاصل کئے گئے خون کے نمونے کی مقدار</string>
    <string name="pc02text">ملی لیٹر</string>
    <string name="pc03"> خون کے نمونے کی سیمپل آئی ڈی</string>
    <string name="pc04t">اگر پچھلے دورے کے دوران ناک کا سیمپل لیا گیا تھا تو اس صورت میں ناک کا سیمپل لیں</string>
    <string name="pc04">کیا کرونا کے ٹیسٹ کے لئے ناک سے سیمپل لیا گیا</string>
    <string name="pc041">ہاں</string>
    <string name="pc042">نہیں</string>
    <string name="pc05"> قد سینٹی میٹر میں </string>
    <string name="pa01">منتخب فرد /بچہ کی شناختی آئی ڈی</string>
    <string name="pa02">بچے کا نام(منتخب فرد/بچہ) کا نام</string>
    <string name="pa02a">کیا منتخب فرد /بچہ جوابدہندہ ہے</string>
    <string name="pa0201">ہاں</string>
    <string name="pa0202">نہیں</string>
    <string name="pa02b">جواب دہندہ کا نام</string>
    <string name="pa03">راضی  نامہ پڑھ کر اجازت حاصل کر لی گئی ہے؟</string>
    <string name="pa031">ہاں، اجازت مل گئی </string>
    <string name="pa032">نہیں، اجازت نہیں ملی</string>
    <string name="pa033">منتخب فرد /بچہ گھر پر موجود نہیں</string>
    <string name="pa04">کیا (منتخب فرد/بچہ) کو ہمارے آخری دورے کے بعد سے مندرجہ ذیل علامات میں سے کوئی علامت ہے یا تھی؟</string>
    <string name="pa041">بخار       </string>
    <string name="pa041a">ہاں</string>
    <string name="pa041b">نہیں</string>
    <string name="pa042">خشک کھانسی  </string>
    <string name="pa042a">ہاں</string>
    <string name="pa042b">نہیں</string>
    <string name="pa043">تھکاوٹ  </string>
    <string name="pa043a">ہاں</string>
    <string name="pa043b">نہیں</string>
    <string name="pb13c">کمزوری</string>
    <string name="pb13ca">ہاں</string>
    <string name="pb13cb">نہیں</string>
    <string name="pa044">درد اور تکلیف </string>
    <string name="pa044a">ہاں</string>
    <string name="pa044b">نہیں</string>
    <string name="pa045">گلے کی خرابی یا سوزش </string>
    <string name="pa045a">ہاں</string>
    <string name="pa045b">نہیں</string>
    <string name="pa046">ڈائریا  یا  اسہال   </string>
    <string name="pa046a">ہاں</string>
    <string name="pa046b">نہیں</string>
    <string name="pa047">آشوب چشم یا آنکھوں کی بیماری </string>
    <string name="pa047a">ہاں</string>
    <string name="pa047b">نہیں</string>
    <string name="pa048">سر کا درد </string>
    <string name="pa048a">ہاں</string>
    <string name="pa048b">نہیں</string>
    <string name="pa049">زائقہ یا خوشبو محسوس نہ ہونا  </string>
    <string name="pa049a">ہاں</string>
    <string name="pa049b">نہیں</string>
    <string name="pa0410">جلدپرخارش،یا ہاتھ یاپیر کی انگلیوں کابے رنگ ہونا   </string>
    <string name="pa0410a">ہاں</string>
    <string name="pa0410b">نہیں</string>
    <string name="pa0411">سانس لینے میں دشواری یا دم گھٹنا</string>
    <string name="pa0411a">ہاں</string>
    <string name="pa0411b">نہیں</string>
    <string name="pa0412">سینے میں درد یا دباؤ  </string>
    <string name="pa0412a">ہاں</string>
    <string name="pa0412b">نہیں</string>
    <string name="pa0413">بولنے یا حرکت میں کمی </string>
    <string name="pa0413a">ہاں</string>
    <string name="pa0413b">نہیں</string>
    <string name="pa0414">سونگھنے کی حس میں کمی</string>
    <string name="pa0414a">ہاں</string>
    <string name="pa0414b">نہیں</string>
    <string name="pa0415">ذائقہ محسوس ہونے میں کمی</string>
    <string name="pa0415a">ہاں</string>
    <string name="pa0415b">نہیں</string>
    <string name="pa05">کیا (منتخب فرد/بچہ)نے گذشتہ آٹھ مہینوں میں یاآخری ملاقات کے بعد سے کسی بھی معاشرتی اجتماع (شادی ، جنازہ ، سیمینار وغیرہ) میں شرکت کی؟</string>
    <string name="pa0501">ہاں</string>
    <string name="pa0502">نہیں</string>
    <string name="pa06">اگر ہاں تو ایسے اجتماعات میں شریک ہونے والے اجتماعات کی تعداد بتائیں۔</string>
    <string name="pa06a">جولائی، 2020 میں آپکے شریک ہو نے والے اجتماعات کی تعداد</string>
    <string name="pa06b">اگست ، 2020 میں آپکے شریک ہو نے والے اجتماعات کی تعداد</string>
    <string name="pa06c">ستمبر ، 2020 میں آپکے شریک ہو نے والے اجتماعات کی تعداد</string>
    <string name="pa06d">اکتوبر ، 2020 میں آپکے شریک ہو نے والے اجتماعات کی تعداد</string>
    <string name="pa06e">نومبر ، 2020 میں آپکے شریک ہو نے والے اجتماعات کی تعداد</string>
    <string name="pa06f">دسمبر، 2020 میں آپکے شریک ہو نے والے اجتماعات کی تعداد</string>
    <string name="pa06g">جنوری  ، 2020 میں آپکے شریک ہو نے والے اجتماعات کی تعداد</string>
    <string name="pa06h">فروری ، 2020 میں آپکے شریک ہو نے والے اجتماعات کی تعداد</string>
    <string name="pa0698">شرکت نہیں کی</string>
    <string name="pa07">کیااس (منتخب فرد/بچہ)ہمارے آخری دورے کے بعدکسی تصدیق شدہ کورونا وائرس کے مریض سے رابطہ ہواہے؟</string>
    <string name="pa07a">ہاں</string>
    <string name="pa07b">نہیں</string>
    <string name="pa08">اگرہاں،توبراہ کرم تمام ممکنہ یا تصدیق شدہ کیسز میں سےمنفرد کیس شناخت کنندگان کی فہرست بنائیں</string>
    <string name="pa08n">رابطے میں آنے والے تصدیق شدہ مریضوں کی تعداد</string>
    <string name="pa0801n">تصدیق شدہ کورونا وائرس کے مریض  کا نام</string>
    <string name="pa0801ad">تصدیق شدہ کورونا وائرس کے مریض کا مکمل پتہ</string>
    <string name="pa0802n">تصدیق شدہ کورونا وائرس کے مریض  کا نام</string>
    <string name="pa0802ad">تصدیق شدہ کورونا وائرس کے مریض کا مکمل پتہ</string>
    <string name="pa0803n">تصدیق شدہ کورونا وائرس کے مریض  کا نام</string>
    <string name="pa0803ad">تصدیق شدہ کورونا وائرس کے مریض کا مکمل پتہ</string>
    <string name="pa0804n">تصدیق شدہ کورونا وائرس کے مریض  کا نام</string>
    <string name="pa0804ad">تصدیق شدہ کورونا وائرس کے مریض کا مکمل پتہ</string>
    <string name="pa0805n">تصدیق شدہ کورونا وائرس کے مریض  کا نام</string>
    <string name="pa0805ad">تصدیق شدہ کورونا وائرس کے مریض کا مکمل پتہ</string>
    <string name="pa0806n">تصدیق شدہ کورونا وائرس کے مریض  کا نام</string>
    <string name="pa0806ad">تصدیق شدہ کورونا وائرس کے مریض کا مکمل پتہ</string>
    <string name="pa0807n">تصدیق شدہ کورونا وائرس کے مریض  کا نام</string>
    <string name="pa0807ad">تصدیق شدہ کورونا وائرس کے مریض کا مکمل پتہ</string>
    <string name="pa0808n">تصدیق شدہ کورونا وائرس کے مریض  کا نام</string>
    <string name="pa0808ad">تصدیق شدہ کورونا وائرس کے مریض کا مکمل پتہ</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="empty">" "</string>
    <string name="txtName"> qwertyuiop asdfghjkl zxcvbnm QWERTYUIOP ASDFGHJKL ZXCVBNM </string>
    <string name="logout">Logout</string>
    <string name="cluster_number">Cluster number</string>
    <string name="check">CHECK</string>
    <string name="open_db_manager">Open DB Manager</string>
    <string name="new_version_of_this_app_is_available_for_download">New version of this app is available for download.</string>
    <string name="a_project_of">A PROJECT OF</string>
    <string name="aga_khan_logo">Aga Khan LOGO</string>
    <string name="formdate">فارم کی تاریخ</string>
    <string name="team_credit">This app is developed by The Software Developers Team of Data Management Unit,\nPediatrics Department, Division of Women and Child Health, \n Aga Khan University.</string>
    <string name="username">Username</string>
    <string name="end_interview"> انٹرویو ختم کریں </string>
    <string name="start_interview"> انٹرویو شروع کریں </string>
    <string name="nextSection"> اگلا سیکشن </string>
    <string name="copy_data_to_sdcard">COPY DATA TO SDCARD</string>
    <string name="pc02a">ہیموگلوبن کے نتائج درج کریں۔</string>
    <string name="pc03a">کیا کرونا کے ٹیسٹ کے لئے ناک سے سیمپل لیا گیا</string>
    <string name="pc03b">ناک کے سیمپل کی آئی ڈی</string>
    <string name="pc03a1">ہاں</string>
    <string name="pc03a2">نہیں</string>
    <string name="pc04a">پیمائش کرنے والے کا کوڈ</string>
    <string name="pc06">وزن کلو گرام میں</string>
    <string name="pafd"> انٹرویو کی تاریخ : سال / مہینہ / دن </string>
</resources>