<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.other.MainActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.covid_followup_app.activities.other.MainActivity" />
    </data>

    <LinearLayout
        style="@style/vlinearlayout"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/testing"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/red"
            android:elevation="6dp"
            android:gravity="center"
            android:keepScreenOn="true"
            android:text="@string/only_for_testing"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblAppVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="@color/lightOrange"
            android:textAlignment="center"
            android:textColor="@color/darkRed"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/msgUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:gravity="center_horizontal"
            android:text="@string/new_version_of_this_app_is_available_for_download"
            android:textColor="@color/red"
            android:textSize="24sp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/recordSummary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/dullWhileOverlay"
                    android:padding="10dp"
                    android:text="@string/records_summary"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent" />

                <!--Next To Main-->
                <LinearLayout
                    android:id="@+id/spinners"
                    style="@style/linearlayout_view"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recordSummary">

                    <!--District-->
                    <androidx.cardview.widget.CardView style="@style/cardView">

                        <LinearLayout
                            style="@style/linearlayout_view"
                            android:layoutDirection="ltr"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/i_textview"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="District" />

                            <Spinner
                                android:id="@+id/spinnerProvince"
                                style="@null"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="2" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <!--Sub-Districts-->
                    <androidx.cardview.widget.CardView style="@style/cardView">

                        <LinearLayout
                            style="@style/linearlayout_view"
                            android:layoutDirection="ltr"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/i_textview"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="Sub-District" />

                            <Spinner
                                android:id="@+id/spinnerDistrict"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="2" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <ImageButton
                    android:id="@+id/open_form_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="32dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="false"
                    android:contentDescription="@string/nextSection"
                    android:onClick="@{callback::OpenFormClicked}"
                    android:src="@drawable/circle_search"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinners" />

                <LinearLayout
                    android:id="@+id/adminBlock"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="24dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/open_form_btn">

                    <Button
                        android:id="@+id/openDBManager"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:onClick="@{callback::OpenDBManagerBtn}"
                        android:text="@string/open_db_manager" />


                    <Button
                        android:id="@+id/copyData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:onClick="@{callback::CopyDataToFileBtn}"
                        android:text="@string/copy_data_to_sdcard" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </LinearLayout>

</layout>